[gd_scene load_steps=6 format=3 uid="uid://b6u7jg7p846ds"]

[ext_resource type="Script" path="res://Logica/Client/boot_loader.gd" id="1_tjorw"]
[ext_resource type="Script" path="res://Logica/DataBaseModels/DataResource.gd" id="2_whlcd"]
[ext_resource type="PackedScene" uid="uid://ikw4f8lpvws8" path="res://Escenas/Display/control_message.tscn" id="3_txufb"]
[ext_resource type="Script" path="res://Logica/Client/client_request.gd" id="5_a26vs"]
[ext_resource type="Script" path="res://Logica/Client/manage_data.gd" id="6_m3sma"]

[node name="BootLoader" type="Node"]
script = ExtResource("1_tjorw")
data_resourse = ExtResource("2_whlcd")
metadata/_edit_vertical_guides_ = [534.0]
metadata/_edit_horizontal_guides_ = [288.0]

[node name="ControlMessage" parent="." instance=ExtResource("3_txufb")]

[node name="ClientRequest" type="HTTPRequest" parent="."]
script = ExtResource("5_a26vs")

[node name="ManageData" type="Node" parent="."]
script = ExtResource("6_m3sma")

[connection signal="request_completed" from="ClientRequest" to="ClientRequest" method="_on_request_completed"]
